--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@ body {
 <div class="footer">
   <h5>contact manegote@gmail.com</h5>
   <p>Docx all rights resvered</p>
+  <a href="downloadjpeg.html">-</a>
 </div>
 
 </body>
