--- a/downloadjpeg.html
+++ b/downloadjpeg.html
@@ -67,9 +67,9 @@ li.dropdown {
 
 <div style="padding:20px;background-color:#1abc9c">
   <h1><center>Download J1209PEG</center></h1>
-  <h2><center>Docx v3.0</center></h2>
-  <a href="W1209-User's-Guide.txt" download>
+  <a href="J1209PEG.jpg" download>
   <center><img src="downloadnow.gif" alt="broken img"></center>
+
 
 </div>
 
