--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@ body {
   <h5>contact manegote@gmail.com</h5>
   <p>Docx all rights resvered</p>
   <a href="downloadjpeg.html">-</a>
+  <a href="downloadfourm.html">-</a>
 </div>
 
 </body>
