--- a/download.html
+++ b/download.html
@@ -72,11 +72,18 @@ li.dropdown {
   <a href="docxdebugger.rar" download>
   <h2>Click me to download docx debugger!</h2>
 </a>
+  <a href="DocEncrypter.rar" download>
+  <h2>Click me to download docEncrypter!</h2>
+</a>
+  <h2>Docx v4.0</h2>
+  <a href="docx-4.0v.rar" download>
+  <img src="downloadnow.gif" alt="docx v4.0">
+</a>
   <h3>Docx v3.8 (unstable)</h3>
   <a href="docx-3.8v.rar" download>
   <img src="downloadnow.gif" alt="docx v3.8">
 </a>
-  <h2>Docx v3.0</h2>
+  <h3>Docx v3.0</h3>
   <a href="docx-3.0v.rar" download>
   <img src="downloadnow.gif" alt="docx v3.0">
 </a>
