--- a/index.html
+++ b/index.html
@@ -118,7 +118,10 @@ body {
 </div>
 
 <div class="navbar">
-  <a href="download.html">----------------------------------------------------------------------------------------------------------------------------Download--------------------------------------------------------------------------------------------------------------------------</a>
+  <a href="download.html">Download Docx</a>
+    <a href="downloadparser.html">Download Parser</a>
+      <a href="downloaddoxdebugger.html">Download DocxDebugger</a>
+        <a href="downloaddocencrypter.html">Download DocEncrypter</a>
 </div>
     <h2><center>ABOUT DOCX<center></h2>
     <h5><center>jun 5, 2020<center></h5>
@@ -139,3 +142,4 @@ body {
 
 </body>
 </html>
+
