--- a/download.html
+++ b/download.html
@@ -57,7 +57,7 @@ li.dropdown {
 <body>
 
 <ul>
-  <li><a href="index.html">-----------------------------------------------------------------------------------------------------------------------------Home-----------------------------------------------------------------------------------------------------------------------------</a></li>
+  <li><a href="index.html">Home</a></li>
     </div>
   </li>
 </ul>
@@ -69,12 +69,6 @@ li.dropdown {
 <div style="padding:20px;background-color:#1abc9c">
   <h1><center>Download Docx</center></h1>
   <h2><center>Please pick a virsion to download</center></h2>
-  <a href="docxdebugger.rar" download>
-  <h2>Click me to download docx debugger!</h2>
-</a>
-  <a href="DocEncrypter.rar" download>
-  <h2>Click me to download docEncrypter!</h2>
-</a>
   <h2>Docx v4.0</h2>
   <a href="docx-4.0v.rar" download>
   <img src="downloadnow.gif" alt="docx v4.0">
