--- a/downloadparser.html
+++ b/downloadparser.html
@@ -69,6 +69,12 @@ li.dropdown {
 <div style="padding:20px;background-color:#1abc9c">
   <h1><center>Download Parser</center></h1>
   <h2><center>Please pick a virsion to download</center></h2>
+    <h1>Instructions for use</h1>
+    <p>Run "Parser xxxx.bat" and wait for it to create "Input.xtf"</p>
+        <p>The program will exit itself. Put *batch* code inside of "Input.xtf"</p>
+    <p> and run the program again. It will load the xtf file and run your batch code</p>
+    <h2>Code Plugin for oem is coming soon estimated arrival 20/8/2020</h2>
+  
   <h2>parser v1.0</h2>
   <a href="parser-1.0v.rar" download>
   <img src="downloadnow.gif" alt="docx v4.0">
