--- a/downloadparser.html
+++ b/downloadparser.html
@@ -78,4 +78,11 @@ li.dropdown {
   <h2>parser v1.0</h2>
   <a href="parser-1.0v.rar" download>
   <img src="downloadnow.gif" alt="docx v4.0">
+  </a>
+    <h2>parser v1.8</h2>
+	<p>This virsion is only for OEM intergrators<p>
+		<p>Copy and paste code form inside the batch file<p>
+			<p>to your program and configure "config.yml"<p>
+  <a href="parser-v1.8.rar" download>
+  <img src="downloadnow.gif" alt="docx v4.0">
 </a>
