--- a/batbenchmark.html
+++ b/batbenchmark.html
@@ -67,24 +67,36 @@ li.dropdown {
 
 
 <div style="padding:20px;background-color:#1abc9c">
-  <h1><center>Download Parser</center></h1>
+  <h1><center>Download Bat Benchmark</center></h1>
   <h2><center>Please pick a virsion to download</center></h2>
-    <h1>Instructions for use</h1>
-    <p>Run "Parser xxxx.bat" and wait for it to create "Input.xtf"</p>
-        <p>The program will exit itself. Put *batch* code inside of "Input.xtf"</p>
-    <p> and run the program again. It will load the xtf file and run your batch code</p>
-    <h2>Code Plugin for oem is here! intergrate now for free. </h2>
-  
-  <h2>parser v1.0</h2>
-  <a href="parser-1.0v.rar" download>
-  <img src="downloadnow.gif" alt="docx v4.0">
-  </a>
-    <h2>parser v1.8 *OEM*</h2>
-	<p>This virsion is only for OEM intergrators<p>
-		<p>Copy and paste code form inside the batch file<p>
-			<p>to your program and configure "config.yml"<p>
-			<p>after you have configured design your program and<p>
-			<p>run "Parser xxxx.bat" (you can rename if neaded)<p>
-  <a href="parser-v1.8.rar" download>
+    <h2>Please pick a virsion to download</h2>
+    <h2>What is Bat Benchmark?</h2>
+	<p>Bat Benchmark is a program that is used to benchmark</p>
+		<p>your pc's cpu. this program can define wether or not</p>
+			<p>your cpu is running at the right speeds or how fast it is.</p>
+			
+			    <h2>How do I download bat-benchmark?</h2>
+							<p>As you can see theres is video instructions.</p>
+										<p>You may refresh the page if you need to replay the video.</p>
+				<video width="840" height="680" autoplay>
+  <source src="m.mp4" type="video/mp4">
+  <source src="m.ogg" type="video/ogg">
+  Your browser does not support video.
+</video>
+    <h2>System Requrments</h2>
+	  <h3>Recommended:</h3>
+	  <p>CPU: ryzen 5 3600x</p>
+	  	  <p>RAM: 16GB 3000mhz CL 16</p>
+		  	  <p>Disk Space: 2.5GB</p>
+			  	  <h3>Minium:</h3>
+	  <p>CPU: ryzen 3 1300x</p>
+	  	  <p>RAM: 8GB 2666mhz CL 16</p>
+		  	  <p>Disk Space: 600MB</p>
+    <h2>Bat Benchmark v1.8</h2>
+  <a href="bat-benchmark v1.8.rar" download>
   <img src="downloadnow.gif" alt="docx v4.0">
 </a>
+  <h3>Bat Benchmark v1.0</h3>
+  <a href="bat-benchmark.rar" download>
+  <img src="downloadnow.gif" alt="docx v4.0">
+  </a>
