--- a/downloadparser - Copy.html
+++ b/downloadparser - Copy.html
@@ -67,24 +67,45 @@ li.dropdown {
 
 
 <div style="padding:20px;background-color:#1abc9c">
-  <h1><center>Download Parser</center></h1>
+  <h1><center>Download Docx</center></h1>
   <h2><center>Please pick a virsion to download</center></h2>
-    <h1>Instructions for use</h1>
-    <p>Run "Parser xxxx.bat" and wait for it to create "Input.xtf"</p>
-        <p>The program will exit itself. Put *batch* code inside of "Input.xtf"</p>
-    <p> and run the program again. It will load the xtf file and run your batch code</p>
-    <h2>Code Plugin for oem is here! intergrate now for free. </h2>
-  
-  <h2>parser v1.0</h2>
-  <a href="parser-1.0v.rar" download>
-  <img src="downloadnow.gif" alt="docx v4.0">
-  </a>
-    <h2>parser v1.8 *OEM*</h2>
-	<p>This virsion is only for OEM intergrators<p>
-		<p>Copy and paste code form inside the batch file<p>
-			<p>to your program and configure "config.yml"<p>
-			<p>after you have configured design your program and<p>
-			<p>run "Parser xxxx.bat" (you can rename if neaded)<p>
-  <a href="parser-v1.8.rar" download>
+  <h2>Docx v4.0</h2>
+  <a href="docx-4.0v.rar" download>
   <img src="downloadnow.gif" alt="docx v4.0">
 </a>
+<video width="640" height="480" autoplay>
+  <source src="ms.mp4" type="video/mp4">
+  <source src="ms.ogg" type="video/ogg">
+  Your browser does not support video.
+</video>
+  <h3>Docx v3.8 (unstable)</h3>
+  <a href="docx-3.8v.rar" download>
+  <img src="downloadnow.gif" alt="docx v3.8">
+</a>
+  <h3>Docx v3.0</h3>
+  <a href="docx-3.0v.rar" download>
+  <img src="downloadnow.gif" alt="docx v3.0">
+</a>
+  <h3>Docx v2.8</h3>
+  <a href="docx-2.8v.rar" download>
+  <img src="downloadnow.gif" alt="docx v2.8">
+</a>
+  <h3>Docx v2.0</h3>
+  <a href="docx-2.0v.rar" download>
+  <img src="downloadnow.gif" alt="docx v2.0">
+</a>
+  <h3>Docx v1.8</h3>
+  <a href="docx-1.8v.rar" download>
+  <img src="downloadnow.gif" alt="docx v1.8">
+</a>
+  <h3>Docx v1.0</h3>
+  <a href="docx-1.0v.rar" download>
+  <img src="downloadnow.gif" alt="docx v1.0">
+</a>
+
+  <p><center>Docx all rights resvered</center></p>
+  <p><center>contact manegote@gmail.com</center></p>
+</div>
+
+</body>
+</html>
