--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@ body {
 <body>
 
 <div class="header">
-  <h1>Docx</h1>
-  <p>Download Docx Now!</p>
+  <h1>DOCX PRODUCTS</h1>
+  <p>These are all the docx products.</p>
 </div>
 
 <div class="navbar">
@@ -122,6 +122,7 @@ body {
     <a href="downloadparser.html">Download Parser</a>
       <a href="downloaddoxdebugger.html">Download DocxDebugger</a>
         <a href="downloaddocencrypter.html">Download DocEncrypter</a>
+		  <a href="batbenchmark.html">Download BatBenchmark</a>
 </div>
     <h2><center>ABOUT DOCX<center></h2>
     <h5><center>jun 5, 2020<center></h5>
