--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@ body {
       <a href="downloaddoxdebugger.html">Download DocxDebugger</a>
         <a href="downloaddocencrypter.html">Download DocEncrypter</a>
 		  <a href="batbenchmark.html">Download BatBenchmark</a>
+		  <a href="fappbootloader.html">Download Fmos-bootloader</a>
 </div>
     <h2><center>ABOUT DOCX<center></h2>
     <h5><center>jun 5, 2020<center></h5>
