--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@ body {
         <a href="downloaddocencrypter.html">Download DocEncrypter</a>
 		  <a href="batbenchmark.html">Download BatBenchmark</a>
 		  <a href="fappbootloader.html">Download Fmos-bootloader</a>
+	<a href="unix.html">Download Unix</a>
 </div>
     <h2><center>ABOUT DOCX<center></h2>
     <h5><center>jun 5, 2020<center></h5>
